--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,10 @@
+<h2>Welcome to My App</h2>
+
+<div class="button-container">
+  <button routerLink="/auth/login">Login</button>
+  <button routerLink="/auth/register">Sign Up</button>
+  <button routerLink="/home">Feature Evaluator</button>
+</div>
+
+<!-- This will load the actual component when navigated -->
 <router-outlet></router-outlet>
