--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,11 @@
+<nav>
+  <a routerLink="/home">Home</a> |
+  <a routerLink="/auth/login">Login</a> |
+  <a routerLink="/auth/register">Register</a>
+</nav>
+
 <router-outlet></router-outlet>
+
+
+
+
