--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,18 @@
 <h2>Welcome to My App</h2>
 
 <div class="button-container">
+  <!-- Auth routes -->
   <button routerLink="/auth/login">Login</button>
   <button routerLink="/auth/register">Sign Up</button>
+
+  <!-- Feature -->
   <button routerLink="/home">Feature Evaluator</button>
+
+  <!-- Templates -->
+  <button routerLink="/templates/1">Template 1</button>
+  <button routerLink="/templates/2">Template 2</button>
+  <button routerLink="/templates/3">Template 3</button>
+  <button routerLink="/templates/4">Template 4</button>
 </div>
 
-<!-- This will load the actual component when navigated -->
 <router-outlet></router-outlet>
